Bug 618959 - "My add-on doesn't fit.." option missing under Categories

--- a/media/css/zamboni/developers.css
+++ b/media/css/zamboni/developers.css
@@ -241,9 +241,9 @@ label.above-the-field .locale {
     margin-left: 0.5em;
 }
 
-#addon_categories_edit li {
+#addon_categories_edit ul {
     float: left;
-    width: 250px;
+    margin-right: 20px;
 }
 
 /*
